# opencl-raytracer

./: .clang-format  CMakeLists.txt  LICENSE  README.md
3rd/glad/: CMakeLists.txt
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
cmake/: 3rd.cmake
src/: main.cpp
src/app/: gui.cpp  gui.h  state.h  style.h
src/app/renderer/: renderer.cpp  renderer.h
src/app/utils/: image.cpp  image.h
src/opencl/: cl_context.cpp  cl_context.h
src/os/: window.cpp  window.h
src/utils/: utils.cpp  utils.h
